att da comunidade

--- a/login.html
+++ b/login.html
@@ -129,7 +129,8 @@
             font-size: 3rem;
             margin-bottom: 1rem;
             background: linear-gradient(45deg, var(--primary-color), #83ff86);
-            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
             -webkit-text-fill-color: transparent;
         }
 
