--- a/comunity.html
+++ b/comunity.html
@@ -311,6 +311,19 @@
         100% { background-position: 0% 50%; }
     }
 
+    #profilePic {
+    height: 35px;
+    width: 35px;
+    aspect-ratio: 1 / 1; /* Mantém o formato quadrado */
+    border-radius: 50%; /* Torna a imagem circular */
+    border: 2px solid #4CAF50; /* Borda para destacar */
+    transition: transform 0.6s ease; /* Efeito hover opcional */
+}
+
+#profilePic:hover {
+    transform: scale(1.1); /* Efeito de zoom no hover */
+}
+
     .new-post-btn {
 background: #1da1f2;
 color: white;
@@ -400,12 +413,16 @@ transition: background 0.3s;
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="index.html" class="nav-link">Início</a>
-                    <a href=" dashboard.html" class="nav-link">Dashboard</a>
+                    <a href="dashboard.html" class="nav-link">Dashboard</a>
                     <a href="renewables.html" class="nav-link">Energia Renovável</a>
                     <a href="tips.html" class="nav-link">Dicas</a>
                     <a href="about.html" class="nav-link">Sobre</a>
                     <a href="comunity.html" class="nav-link">Comunidade</a>
-                </div>
+                    <div class="flex items-center space-x-4">
+                        <a href="profile.html" id="user">
+                            <img src="profile-picture.jpg" alt="Foto de Perfil" id="profilePic">
+                        </a>
+                    </div>
                 <button class="md:hidden">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -695,6 +712,41 @@ transition: background 0.3s;
     feed.insertBefore(post, feed.firstChild);
     post.style.animation = 'slideIn 0.3s ease-out';
 }
+
+window.onload = function () {
+    fetch('/user')
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Usuário não autenticado');
+            }
+            return response.json();
+        })
+        .then(data => {
+            const profilePicPath = data.profilePic ? `/img/${data.profilePic}` : '/img/default.jpg';
+            const profilePicElement = document.getElementById('profilePic');
+
+            profilePicElement.src = profilePicPath;
+
+        })
+        .catch(error => {
+            console.error('Erro ao carregar os dados do usuário:', error);
+            document.getElementById('profilePic').src = '/img/default.jpg';
+        });
+};
+
+    const profilePicPath = data.profilePic 
+      ? `/img/${data.profilePic}?t=${new Date().getTime()}` 
+      : '/img/default.jpg';
+    profilePicElement.src = profilePicPath;
+
+        // Mobile Menu Toggle
+        const menuButton = document.querySelector('button');
+        const navLinks = document.querySelector('.md\\:flex');
+
+        menuButton.addEventListener('click', () => {
+            navLinks.classList.toggle('hidden');
+        });
+
         });
     </script>
 </body>
