--- a/about.html
+++ b/about.html
@@ -122,10 +122,7 @@
                     <a href="renewables.html" class="nav-link">Energia Renovável</a>
                     <a href="tips.html" class="nav-link">Dicas</a>
                     <a href="about.html" class="nav-link">Sobre</a>
-<<<<<<< HEAD
-=======
-                    <a href="comunity.html" class="nav-link">Comunidade</a>
->>>>>>> a61601ce706e9429fc0acc559a13a2454cfbbad5
+                    <a href="conversion.html" class="nav-link">Biomassa</a>
                     <div class="flex items-center space-x-4">
                         <a href="profile.html" id="user">
                             <img src="profile-picture.jpg" alt="Foto de Perfil" id="profilePic">
