--- a/dashboard.html
+++ b/dashboard.html
@@ -138,10 +138,7 @@
                     <a href="renewables.html" class="nav-link">Energia Renovável</a>
                     <a href="tips.html" class="nav-link">Dicas</a>
                     <a href="about.html" class="nav-link">Sobre</a>
-<<<<<<< HEAD
-=======
-                    <a href="comunity.html" class="nav-link">Comunidade</a>
->>>>>>> a61601ce706e9429fc0acc559a13a2454cfbbad5
+                    <a href="conversion.html" class="nav-link">Biomassa</a>
                     <div class="flex items-center space-x-4">
                         <a href="profile.html" id="user">
                             <img src="profile-picture.jpg" alt="Foto de Perfil" id="profilePic">
@@ -393,9 +390,6 @@ const emissaoCO2 = 0.5;  // kg de CO2 por kWh
 const consumoAC = 250;  // kWh
 const consumoSAC = 200;  // kWh
 const distribuicaoAparelhos = "Ar Condicionado: 30%, Geladeira: 15%, Televisão: 10%, Iluminação: 5%, Outros: 40%";  // Exemplo de distribuição de energia
-
-// Chama a função para exportar os dados
-importToExcel(consumoHoje, consumoMensal, tarifa, emissaoCO2, consumoAC, consumoSAC, distribuicaoAparelhos);
 
 
 
