--- a/tips.html
+++ b/tips.html
@@ -121,10 +121,7 @@
                     <a href="renewables.html" class="nav-link">Energia Renovável</a>
                     <a href="tips.html" class="nav-link">Dicas</a>
                     <a href="about.html" class="nav-link">Sobre</a>
-<<<<<<< HEAD
-=======
-                    <a href="comunity.html" class="nav-link">Comunidade</a>
->>>>>>> a61601ce706e9429fc0acc559a13a2454cfbbad5
+                    <a href="conversion.html" class="nav-link">Biomassa</a>
                     <div class="flex items-center space-x-4">
                         <a href="profile.html" id="user">
                             <img src="profile-picture.jpg" alt="Foto de Perfil" id="profilePic">
@@ -186,7 +183,6 @@
                 </div>
             </div>
 
-            <!-- CTA Section -->
             <section class="mt-16 text-center">
                 <h2 class="text-4xl font-bold mb-6">Faça a sua parte para um futuro sustentável!</h2>
                 <p class="text-gray-400 mb-8">Implementar essas dicas no seu dia a dia pode contribuir para a preservação do meio ambiente e para uma economia mais sustentável.</p>
