--- a/index.html
+++ b/index.html
@@ -108,10 +108,7 @@
                     <a href="renewables.html" class="nav-link">Energia Renovável</a>
                     <a href="tips.html" class="nav-link">Dicas</a>
                     <a href="about.html" class="nav-link">Sobre</a>
-<<<<<<< HEAD
-=======
-                    <a href="comunity.html" class="nav-link">Comunidade</a>
->>>>>>> a61601ce706e9429fc0acc559a13a2454cfbbad5
+                    <a href="conversion.html" class="nav-link">Biomassa</a>
                     <div class="flex items-center space-x-4">
                         <a href="profile.html" id="user">
                             <img src="profile-picture.jpg" alt="Foto de Perfil" id="profilePic">
@@ -146,7 +143,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 mt-12 md:mt-0">
-                    <img src="https://picsum.photos/600/400?random=1" alt="Energy Dashboard" class="rounded-lg shadow-2xl">
+                   
                 </div>
             </div>
         </div>
